--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="btnIaPlayer">Contra IA</button>
     </div>
 
-    <div  id="'container" class="hide"> <!--Representa o jogo da velha-->
+    <div  id="container" class="hide"> <!--Representa o jogo da velha-->
         <div class="box" id="block-1"></div> <!--Representa cada um dos blocos-->
         <div class="box" id="block-2"></div>
         <div class="box" id="block-3"></div>
@@ -25,6 +25,7 @@
         <div class="box" id="block-9"></div>
     
         <div id="scoreboard-container"> <!--Placar-->
+            <h2>Placar:</h2>
             <span class="score-box">
                 <span id="x-scoreboard">X</span>:
                 <span id="scoreboard-1">0</span>
@@ -37,12 +38,12 @@
     </div>
 
     <div class="hide"> <!--Contém os elementos ('X' e 'O' que serão inseridos no quadro do jogo da velha)-->
-        <div classe="x">X</div>
-        <div classe="o"></div> <!--'O' será feito no CSS-->
+        <div class="x">X</div>
+        <div class="o"></div> <!--'O' será feito no CSS-->
     </div>
     
     <div id="message" class="hide">
-        <p></p> <!--Texto dinâmica dizendo que ganhou-->
+        <p>Teste</p> <!--Texto dinâmica dizendo que ganhou-->
     </div>
   
     <script src="js/script.js"></script>
