--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="btnIaPlayer">Contra IA</button>
     </div>
 
-    <div  id="container" class="hide"> <!--Representa o jogo da velha-->
+    <div  id="container" class=""> <!--Representa o jogo da velha-->
         <div class="box" id="block-1"></div> <!--Representa cada um dos blocos-->
         <div class="box" id="block-2"></div>
         <div class="box" id="block-3"></div>
@@ -45,7 +45,7 @@
     <div id="message" class="hide">
         <p>Teste</p> <!--Texto dinâmica dizendo que ganhou-->
     </div>
-  
+    
     <script src="js/script.js"></script>
 </body>
 </html>
