fazendo a IA jogar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <div id="buttons-container">
         <button id="btn2players">2 Jogadores</button>
-        <button id="btnIaPlayer">Contra IA</button>
+        <button id="btnIAPlayer">Contra IA</button>
     </div>
 
-    <div  id="container" class=""> <!--Representa o jogo da velha-->
+    <div id="container" class="hide"> <!--Representa o jogo da velha-->
         <div class="box" id="block-1"></div> <!--Representa cada um dos blocos-->
         <div class="box" id="block-2"></div>
         <div class="box" id="block-3"></div>
